force-app/main/default/objects/clofor_com_cfs__PurInvVATInv__c/fields/clofor_com_cfs__AmountPIInclTaxLocalFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountPIInclTaxLocalFormula__c</fullName>
    <formula>clofor_com_cfs__PurchasingInvoiceID__r.clofor_com_cfs__AmountIncludedTaxLocal__c</formula>
    <label>AMOUNT P/I INCL TAX(LOCAL)-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>