force-app/main/default/objects/clofor_com_cfs__PurInvVATInv__c/fields/clofor_com_cfs__AmountPIInclTaxLocalForVAT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountPIInclTaxLocalForVAT__c</fullName>
    <label>AMOUNT P/I INCL TAX(LOCAL)-FOR VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>