force-app/main/default/objects/clofor_com_cfs__PurInvVATInv__c/fields/clofor_com_cfs__TotalAmountOfPILocalFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountOfPILocalFormula__c</fullName>
    <formula>clofor_com_cfs__PurchasingInvoiceID__r.clofor_com_cfs__TotalAmountLocal__c</formula>
    <label>TOTAL AMOUNT OF P/I(LOCAL)-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>