force-app/main/default/objects/clofor_com_cfs__PurInvVATInv__c/fields/clofor_com_cfs__TotalAmountOfPILocalForVAT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountOfPILocalForVAT__c</fullName>
    <label>TOTAL AMOUNT OF P/I(LOCAL)-FOR VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>