force-app/main/default/objects/clofor_com_cfs__PurInvVATInv__c/fields/clofor_com_cfs__VATInvoiceID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__VATInvoiceID__c</fullName>
    <label>VAT INVOICE ID</label>
    <referenceTo>clofor_com_cfs__VAT_INVOICE__c</referenceTo>
    <relationshipName>PIVATInvoiceID</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>